# MiniCore

./: CMakeLists.txt  main.c
BSP/: sys.c  sys.h
BSP/gpio/: stm32f4xx_gpio.h
BSP/i2c/: softi2c.c  softi2c.h
BSP/usart/: Serial.h
CORE/: STM32F429IGTx_FLASH.ld  stratup.c
HARDWARE/MPU6050/: inv_mpu.c
HARDWARE/OLED/: OLED.c  OLED.h
HARDWARE/W25Q64/: spiFlash.c
Microkernel_components/: CMakeLists.txt
Microkernel_components/Storage_components/: storage.c  storage.h
USER/: CMakeLists.txt  test.c
arch/include/: core_cmFunc.h
arch/st/m4/f429ig/: stm32f429_stratup.c
device/W25Q64/: spiFlash.c  spiFlash.h
